Add Docker configuration for Redis and Celery worker, update environment variables

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,9 @@
+# PostgreSQL Database Configuration
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=''
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
