--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ Werkzeug==3.0.1
 Jinja2==3.1.2
 
 # Database (for future integration)
-# SQLAlchemy==2.0.23
-# psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+psycopg2-binary==2.9.9
 
 # Celery (for future worker integration)
-# celery==5.3.4
-# redis==5.0.1
+celery==5.3.4
+redis==5.0.1
 
 # Email handling (for future integration)
 # email-validator==2.1.0
+
+# Utilities
+python-dotenv==1.0.0
