--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .github/
 venv/
+.venv/
+pyproject.toml
+uv.lock
+.python-version
 
 # Python cache
 __pycache__/
@@ -19,3 +23,4 @@ __pycache__/
 # OS
 .DS_Store
 Thumbs.db
+Landing Page/
