--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-# Phishly - Python Dependencies
-# Shared requirements for all team members
+# Phishly - Root Requirements
+# Shared dependencies across all services
 
-# Flask Web Framework
-Flask==3.0.0
-Werkzeug==3.0.1
-Jinja2==3.1.2
+# ============================================
+# Core Utilities
+# ============================================
+python-dotenv==1.0.0
 
-# Database (for future integration)
-# SQLAlchemy==2.0.23
-# psycopg2-binary==2.9.9
+# ============================================
+# Service-Specific Requirements
+# ============================================
+# For webadmin: See webadmin/requirements.txt
+# For worker: See worker/requirements.txt
+# For phish: See phish/requirements.txt (when created)
 
-# Celery (for future worker integration)
-# celery==5.3.4
-# redis==5.0.1
-
-# Email handling (for future integration)
-# email-validator==2.1.0
+# ============================================
+# Development Tools (Optional)
+# ============================================
+# pytest==7.4.3
+# black==23.12.1
+# flake8==6.1.0
