--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ __pycache__/
 
 # Environment files
 .env
+.python-version
+uv.lock
 
 # IDE
 .vscode/
@@ -18,4 +20,4 @@ __pycache__/
 
 # OS
 .DS_Store
-Thumbs.db
+Thumbs.db!/.python-version
