feat: unify Docker Compose setup and environment configuration. All service-specific compose files were merged into a single root docker-compose with a comprehensive .env.template, proper health-checked dependencies, and a consistent multi-network architecture, enabling one-command deployment from the project root. Original per-service compose files were preserved for reference and standalone testing.

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,145 @@
+# ==============================================================================
+# Phishly - Environment Variables Template
+# ==============================================================================
+# Copy this file to .env and fill in your actual values
+#
+# SECURITY WARNING: Never commit .env file to version control!
+# ==============================================================================
+
+# ==============================================================================
 # PostgreSQL Database Configuration
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=''
+# ==============================================================================
+POSTGRES_DB=phishly
+POSTGRES_USER=phishly_user
+POSTGRES_PASSWORD=CHANGE_THIS_TO_SECURE_PASSWORD
+
+# ==============================================================================
+# Flask WebAdmin Configuration
+# ==============================================================================
+
+# SECRET_KEY: Used for Flask session signing and CSRF protection
+# CRITICAL SECURITY REQUIREMENT:
+#   1. Generate a secure random key using:
+#      python -c "import secrets; print(secrets.token_hex(32))"
+#
+#   2. Replace the placeholder below with your generated key
+#
+#   3. NEVER commit your actual SECRET_KEY to git!
+#
+#   4. Use different keys for dev/staging/production environments
+#
+# In development: If not set or left as placeholder, a key will be auto-generated
+# In production: Application will REFUSE to start without a proper SECRET_KEY
+SECRET_KEY=CHANGE_THIS_TO_RANDOM_64_CHARACTER_HEX_STRING
+
+# Flask Debug Mode (set to False in production)
+FLASK_DEBUG=True
+
+# ==============================================================================
+# SMTP Email Configuration
+# ==============================================================================
+
+# SMTP Mock Mode (set to false to actually send emails)
+SMTP_MOCK=true
+
+# SMTP Server Configuration
+# Examples:
+#   Gmail: smtp.gmail.com:587 (TLS)
+#   Outlook: smtp-mail.outlook.com:587 (TLS)
+#   Mailjet: in-v3.mailjet.com:587 (TLS)
+#   SendGrid: smtp.sendgrid.net:587 (TLS)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+
+# SMTP Authentication Credentials
+SMTP_USER=your-email@example.com
+SMTP_PASSWORD=your-smtp-password-or-app-password
+
+# SMTP Security Settings
+# Port 587: Use SMTP_USE_TLS=true, SMTP_USE_SSL=false (STARTTLS)
+# Port 465: Use SMTP_USE_TLS=false, SMTP_USE_SSL=true (SSL from start)
+SMTP_USE_TLS=true
+SMTP_USE_SSL=false
+
+# ==============================================================================
+# Phishing Domain Configuration
+# ==============================================================================
+
+# Domain where phishing landing pages are hosted (public-facing)
+# This should be different from your admin domain for security
+PHISHING_DOMAIN=phishing.example.com
+
+# ==============================================================================
+# Network Configuration (Optional - Advanced)
+# ==============================================================================
+
+# These are typically not needed unless you have custom network requirements
+# Uncomment and modify if needed:
+
+# REDIS_HOST=redis-cache
+# REDIS_PORT=6379
+# POSTGRES_HOST=postgres-db
+# POSTGRES_PORT=5432
+
+# ==============================================================================
+# Example Configurations for Different SMTP Providers
+# ==============================================================================
+
+# --- Gmail with App Password ---
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-gmail@gmail.com
+# SMTP_PASSWORD=your-16-character-app-password
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+
+# --- Outlook ---
+# SMTP_HOST=smtp-mail.outlook.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@outlook.com
+# SMTP_PASSWORD=your-outlook-password
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+
+# --- Mailjet ---
+# SMTP_HOST=in-v3.mailjet.com
+# SMTP_PORT=587
+# SMTP_USER=your-mailjet-api-key
+# SMTP_PASSWORD=your-mailjet-secret-key
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+
+# --- SendGrid ---
+# SMTP_HOST=smtp.sendgrid.net
+# SMTP_PORT=587
+# SMTP_USER=apikey
+# SMTP_PASSWORD=your-sendgrid-api-key
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+
+# ==============================================================================
+# Quick Start Instructions
+# ==============================================================================
+#
+# 1. Copy this file to .env:
+#    cp .env.template .env
+#
+# 2. Generate a SECRET_KEY:
+#    python -c "import secrets; print(secrets.token_hex(32))"
+#
+# 3. Fill in your database password (POSTGRES_PASSWORD)
+#
+# 4. Configure SMTP settings (or leave SMTP_MOCK=true for testing)
+#
+# 5. Set your phishing domain (PHISHING_DOMAIN)
+#
+# 6. Start the services:
+#    docker-compose up -d
+#
+# 7. Check logs:
+#    docker-compose logs -f
+#
+# 8. Access admin dashboard:
+#    http://localhost:8006
+#
+# ==============================================================================
