login now works; Error message on failed login, Password change in settings; Small icon on the navigation bar for easy L/D theme switch; The stat display/calculations have been checked, removed the static numbers; Next step is checking if campaigns can be properly created and send emails; add Redis session clearing script; add easy deploy and post-deploy up/down scripts; update README with setup instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,8 +73,9 @@ services:
     container_name: phishly-webadmin
     restart: unless-stopped
 
-    ports:
-      - "8006:8006"
+    # No direct port exposure - accessed through reverse proxy only
+    expose:
+      - "8006"
 
     environment:
       # Flask Configuration
@@ -92,6 +93,8 @@ services:
     volumes:
       # Mount code for hot-reload in development
       - ./webadmin:/app
+      # Mount shared db models directory
+      - ./db:/app/db
       # Exclude Python cache
       - /app/__pycache__
       - /app/.pytest_cache
