--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -7,29 +7,39 @@
 
 # === PERSISTENCE ===
 # RDB Snapshots
-save 900 1       # Save if at least 1 key changed in 900 seconds (15 min)
-save 300 10      # Save if at least 10 keys changed in 300 seconds (5 min)
-save 60 10000    # Save if at least 10000 keys changed in 60 seconds (1 min)
+# Save if at least 1 key changed in 900 seconds (15 min)
+save 900 1
+# Save if at least 10 keys changed in 300 seconds (5 min)
+save 300 10
+# Save if at least 10000 keys changed in 60 seconds (1 min)
+save 60 10000
 
 # Append Only File (AOF) for durability
 appendonly yes
-appendfsync everysec  # Fsync every second (good balance between performance and durability)
+# Fsync every second (good balance between performance and durability)
+appendfsync everysec
 
 # === MEMORY MANAGEMENT ===
 maxmemory 256mb
-maxmemory-policy allkeys-lru  # Evict least recently used keys when memory limit reached
+# Evict least recently used keys when memory limit reached
+maxmemory-policy allkeys-lru
 
 # === NETWORK ===
-bind 0.0.0.0  # Allow connections from any IP (required for container networking)
-protected-mode no  # Disable protected mode (safe within isolated Podman network)
+# Allow connections from any IP (required for container networking)
+bind 0.0.0.0
+# Disable protected mode (safe within isolated Docker network)
+protected-mode no
 port 6379
 tcp-backlog 511
-timeout 0  # No idle timeout for client connections
+# No idle timeout for client connections
+timeout 0
 
 # === GENERAL ===
-databases 16  # Support 16 databases (0-15)
+# Support 16 databases (0-15)
+databases 16
 loglevel notice
-logfile ""  # Log to stdout (captured by Podman logs)
+# Log to stdout (captured by Docker logs)
+logfile ""
 
 # === SESSION MANAGEMENT ===
 # Session expiration tracking (used by Flask-Session and custom logic)
@@ -38,5 +48,6 @@ notify-keyspace-events Ex
 
 # === PERFORMANCE ===
 # Disable slow operations for better performance
-slowlog-log-slower-than 10000  # Log queries slower than 10ms
+# Log queries slower than 10ms
+slowlog-log-slower-than 10000
 slowlog-max-len 128
