feat: add landing page caching, tracking token generation, default landing page support for email templates, new fields to for targets when creating groups, a docker file for landing page server creation, and a bunch of fixes
Signed-off-by: Enryou <34416049+enryou@users.noreply.github.com>

--- a/.env.template
+++ b/.env.template
@@ -70,6 +70,15 @@ SMTP_USE_SSL=false
 PHISHING_DOMAIN=phishing.example.com
 
 # ==============================================================================
+# Tracking Configuration
+# ==============================================================================
+
+# TRACKING_SECRET_KEY: Used for generating HMAC-based tracking tokens
+# Generate a secure random key using:
+#   python -c "import secrets; print(secrets.token_hex(32))"
+TRACKING_SECRET_KEY=CHANGE_THIS_TO_RANDOM_64_CHARACTER_HEX_STRING
+
+# ==============================================================================
 # Network Configuration (Optional - Advanced)
 # ==============================================================================
 
