feat: add email template storage, landing page domains, Podman support, and comprehensive docs
Email Template System:
- Fix email template storage: store HTML in database for worker access
- Migrate template content from file-only to hybrid storage (DB + files)
- Update email renderer to handle NULL text templates with fallback
- Fix worker schema mismatches (email_templates, campaign_targets, events columns)

Landing Page Domain Configuration:
- Make landing page domain field mandatory (database constraint + form validation)
- Use per-landing-page domains for email link generation instead of global PHISHING_DOMAIN
- Add domain parameter to email renderer URL builders
- Update worker tasks to pass landing page domain to renderer
- Email links now use landing page's configured domain (e.g., ups-be.com)

Podman Deployment Support:
- Add 4 Podman deployment scripts (deploy, up, down, restart)
- Implement output redirection to prevent credential exposure in terminal
- Support rootless Podman for enhanced container security
- Add Podman-specific documentation with aliases and security best practices

Code Quality:
- Format all modified files with Black (PEP 8 compliance)
- Fix Flake8 linting errors (line length, imports, code style)
- Split long lines and improve readability
- Update models to match actual database schema

Documentation:
- Add comprehensive Template Management section to README
  - Email template storage system (database + files)
  - Landing page template structure and deployment
  - Template variables (Jinja2) for personalization
  - Domain configuration requirements
- Add Target Management section to README
  - Target database structure and privacy levels
  - Data retention policies (standard vs privacy deletion)
  - GDPR/CCPA compliance procedures
  - CSV import format and data export commands
- Update Quick Start with Docker/Podman side-by-side commands
- Add Deployment section with script usage guide
- Add Troubleshooting section for both platforms


--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Thumbs.db!/.python-version
 # Flask UI templates in webadmin/templates/ remain tracked as they are not in the root
 /templates/
 /webadmin/dns_zones/
+/webadmin/email_templates_imported/*.html
+/webadmin/email_templates_imported/*.htm
