feat: prevent root-owned files with container user directives and directory initialization
Container User Permissions:
- Set user: "1000:1000" for webadmin, celery-worker, and phishing-server services
- Prevents containers from creating root-owned files in mounted volumes
- Ensures all files created by containers are owned by host user

Directory Initialization:
- Add init_directories.sh for automatic directory setup before deployment
- Add fix_directory_ownership.sh for one-time fixing of root-owned directories
- Both scripts check and fix ownership issues with proper permissions
- Deployment scripts (docker/podman) now run init_directories.sh as Step 0

Directory Structure Preservation:
- Add .gitkeep files to preserve empty directories in git:
  - templates/email_templates/.gitkeep
  - templates/landing_pages/.gitkeep
  - webadmin/dns_zones/.gitkeep
- Update .gitignore to exclude directory contents while keeping structure

Documentation:
- Add Prerequisites section to README.md with directory setup instructions
- Document one-time fix process for existing root-owned directories
- Clarify when directory initialization is needed vs automatic

This ensures clean deployments without permission issues, proper git tracking
of directory structure, and prevents future root ownership problems.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ Thumbs.db!/.python-version
 # Note: /templates/ (root-level with leading slash) ignores only the root templates directory
 # Flask UI templates in webadmin/templates/ remain tracked as they are not in the root
 /templates/
-/webadmin/dns_zones/
+
+# DNS zones - ignore all files except .gitkeep
+/webadmin/dns_zones/*
+
+# Email templates imported - ignore HTML files but keep .gitkeep
 /webadmin/email_templates_imported/*.html
 /webadmin/email_templates_imported/*.htm
+
