--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,4 @@ Thumbs.db!/.python-version
 # DNS zones - ignore all files except .gitkeep
 /webadmin/dns_zones/*
 
-# Email templates imported - ignore HTML files but keep .gitkeep
-/webadmin/email_templates_imported/*.html
-/webadmin/email_templates_imported/*.htm
-
+phishly.egg-info/
